# cameltest

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: attacker.py  auditor.py  defender.py  researcher.py
core/: common_functions.py  llm_config.py  ws_manager.py
features/: simulation_runner.py
server/: index.html  main.py
target_app/: app.py  pyproject.toml
target_app/api/: endpoints.py
target_app/db/: mock_db.py
target_app/models/: schemas.py
